--- a/README
+++ b/README
@@ -1,1 +1,22 @@
+The rn.py code predicts the animal distribution given a coleection of map layers
+
+
+This repository contains 7 PNG files, 200x200 pixels each:
+1. Chlorophyll_RESIZE.png
+2. Temperature_RESIZE.png
+3. currents_RESIZE.png
+4. energy_flux_RESIZE.png
+5. height_anomalies_RESIZE.png
+6. photoAv_RESIZE.png
+7. dist5_RESIZE.png
+
+All images from 1st to 6th were obtained from the NASA satelites (SW: 34, -125 & NE: 37, -121) and will be the input data. 
+The 7th image was constructed manually with information reported by DOI:10.1038/s41598-019-50961-z, with white spots corresponding to pelagic ecosystems, and will be the output data.
+First, by running process_data.py the X (input) and y (output) data will be created. X will be a 18x40000 matrix, with each column corresponding to a different pixel from the input data; y will be a 1x40000 matrix, indicating wether that pixel has pelagic ecosystem or not.
+Those matrices will be saved in X.csv and y.csv files respectively.
+The rn.py code read both files and trains the neural network. THe later consists has 500x500x100x1 neurons, distributed in 4 layers. The final output will give a 1x40000 matrix qith the corresponding predictions.
+
+NOTES:
+- For a given prediction, the same kind of data must be given (chlorophyll, temperature, ocean currents, energy flux, height animalies and photosynthetically available radiation.
+- All images must be 200x200 pixels.
 
